# bevy_replicon_bootstrap

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  character_movement_systems.rs  component_snapshot.rs  control.rs  core.rs  culling.rs  dev.rs  ee_map.rs  event_snapshot.rs  interpolation.rs  lib.rs  net_builder.rs  network_entity.rs  network_event.rs  network_transform.rs  physics.rs  player_entity.rs  prediction.rs  quick_lib.rs  quick_net.rs  relevancy.rs  server_builder.rs  snapshot.rs
src/cache/: component_cache.rs  event_cache.rs
src/control/: network_character_controller.rs  network_movement.rs  network_rigidbody.rs  network_transform.rs  network_velocity.rs  physics_systems.rs  systems.rs
src/core/: boot_system_set.rs  component_snapshot.rs  event_snapshot.rs  importance.rs  interpolation.rs  latest_confirmed_tick.rs  network_entity.rs  network_event.rs  network_resource.rs  owner.rs  player_entity.rs  player_entity_map.rs  player_start_line.rs  player_view.rs  prediction.rs
src/culling/: distance.rs  distance_culling.rs  ee_map.rs  relevancy.rs  relevant_group.rs
src/dev/: __ball.rs  client.rs  config.rs  event.rs  game.rs  game_client.rs  game_server.rs  input.rs  level.rs  server.rs
src/net_builder/: client_builder.rs  quinnet_client_builder.rs  quinnet_server_builder.rs  renet_client_builder.rs  renet_server_builder.rs  server_builder.rs
src/physics/: network_character_controller.rs  network_rigidbody.rs  rapier3d.rs  rapier3d_physics.rs
src/quick_lib/: client_builder.rs  distance_culling.rs  network_transform.rs  player_entity.rs  server.rs
src/quick_net/: client.rs  distance_culling.rs  network_transform.rs  server.rs
(+2 files in other folders)
