[package]
name = "bevy_replicon_action"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.83"
bevy = "0.13.2"
bevy_replicon = "0.24.1"
bevy_replicon_renet = "0.1.0"
rand = "0.8.5"
serde = "1.0.200"
