[package]
name = "bevy_replicon_bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
anyhow = "1.0.86"
bevy = "0.14.0"
bevy_replicon = "0.27.0"
bevy_replicon_renet = "0.4.0"
rand = "0.8.5"
serde = "1.0.203"
bevy_rapier3d = { version = "0.27.0", default-features = false, features = ["dim3", "debug-render-3d"] }
rapier3d = "0.21.0"
uuid = "1.10.0"
bevy_replicon_quinnet = "0.4.0"
bevy_quinnet = "0.9.0"
